fix: domain problems, tag

--- a/index.html
+++ b/index.html
@@ -84,8 +84,7 @@
     </main>
 
     <footer class="mt-auto text-white-50">
-        by <a
-                href="https://github.com/lotyp" class="text-white">@lotyp</a>.</p>
+        by <a href="https://github.com/lotyp" class="text-white">@lotyp</a>.
     </footer>
 </div>
 
