fix: fast mobile fix

--- a/index.html
+++ b/index.html
@@ -71,15 +71,15 @@
 
     <main class="px-3">
         <div class="mb-20">
-        <img src="assets/logo.gh-dark-mode-only.png" width="600" alt=" class="d-block mx-auto mb-3">
+        <img src="assets/logo.gh-dark-mode-only.png" width="456" alt=" class="d-block mx-auto mb-3">
         </div>
         <br>
-        <h1 class="">Making things to build better software</h1>
+        <h2 class="">Making things to build better software</h2>
 <!--        <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the-->
 <!--            text, and add your own fullscreen background photo to make it your own.</p>-->
         <br>
         <p class="lead">
-            <a href="https://github.com/wayofdev" class="btn btn-lg btn-secondary fw-bold border-white bg-white">GitHub</a>
+            <a href="https://github.com/wayofdev" class="btn btn-lg btn-secondary fw-bold border-white bg-white">to GitHub</a>
         </p>
     </main>
 
